# tcc

./: teste.py
auto_finance/: .gitignore  README.md  main.py  pyproject.toml
auto_finance/auto_finance/: _set_step.py  processo.py
auto_finance/auto_finance/contexts/: ctx_auto_finance.py
auto_finance/auto_finance/controllers/: ctr_auto_finance.py
auto_finance/auto_finance/environment/: settings.py
auto_finance/auto_finance/models/: steps.py
auto_finance/auto_finance/tools/: exceptions.py
auto_finance/auto_finance/tools/support/: logging.py
